Tests/services aangepast